# Summer_Practice

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
controller/: controller.cpp  controller.h
core/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Polynomial.cpp  Polynomial.h  Types.h
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/form/: mainwindow.ui
gui/gui/headers/: mainwindow.h
gui/headers/: Types.h  mainwindow.h
gui/src/: mainwindow.cpp
report/: sp_report.docx
tests/: console_main.cpp
